Fix footer alignment

--- a/src/widgets/footer/style.module.scss
+++ b/src/widgets/footer/style.module.scss
@@ -6,6 +6,7 @@
   grid-column: 1/2;
   grid-row: -2/-1;
   width: 15rem;
+  justify-self: end;
 }
 
 .githubLink {
@@ -17,7 +18,7 @@
 }
 
 @include m.mobile {
-  .footer {
+  .sidebarFrame {
     justify-self: start;
   }
 }
